# opencv_computer_vision

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/color_img_op/: CMakeLists.txt  backproj1.cpp  backproj2.cpp  color.cpp  color_eq.cpp  color_tone.cpp  inrange.cpp  split.cpp
src/extract_feature/: CMakeLists.txt  canny.cpp  corners.cpp  houghcircle.cpp  houghlines.cpp  mycanny.cpp  sobel.cpp
src/extract_feature/include/: mycanny.hpp
src/feature_point/: CMakeLists.txt  keypoint.cpp  matching.cpp  matching_keypoints.cpp
src/geometric_transformation/: CMakeLists.txt  birdeye.cpp  remap.cpp  resize.cpp  rotate.cpp  shear.cpp  translation.cpp
src/machine_and_deep_learning/: CMakeLists.txt  facedetect.cpp  svm_digits.cpp  svmplane.cpp
src/match_template/: CMakeLists.txt  digit_gen.cpp  digit_rec.cpp  find_items.cpp  template.cpp
src/process_binary/: CMakeLists.txt  adapt_th.cpp  contours1.cpp  contours2.cpp  keyseg.cpp  labeling.cpp  local_th.cpp  otsu.cpp  polygon.cpp  rice_count.cpp  threshold.cpp
